<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/edit_schedule_background_shape"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="?attr/colorOnBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewStartTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_regular"
                        android:gravity="center"
                        android:textColor="?attr/textFillColor"
                        android:textSize="20sp"
                        tools:text="20:00" />

                    <TextView
                        android:id="@+id/textViewEndTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_regular"
                        android:gravity="end"
                        android:textColor="?attr/textFillColor"
                        android:textSize="16sp"
                        tools:text="22:00" />

                </LinearLayout>


                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0"
                    android:background="@drawable/color_shape"
                    android:backgroundTint="?attr/textFillColor" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/rubik_regular"
                        android:maxLines="2"
                        android:textColor="?attr/textFillColor"
                        android:textSize="20sp"
                        tools:text="Schedule" />


                    <TextView
                        android:id="@+id/textViewPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/rubik_regular"
                        android:maxLines="2"
                        android:textColor="?attr/textFillColor"
                        android:textSize="16sp"
                        tools:text="Place" />
                </LinearLayout>

                <View
                    android:id="@+id/viewColorShape"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:background="@drawable/color_shape"
                    tools:backgroundTint="@color/aero" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="0"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/hourPickerStartTime"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center" />

                        <NumberPicker
                            android:id="@+id/minutePickerStartTime"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/start"
                        android:textColor="?attr/textFillColor"
                        android:textSize="20sp" />
                </LinearLayout>

                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="0"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/hourPickerEndTime"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center" />

                        <NumberPicker
                            android:id="@+id/minutePickerEndTime"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/end"
                        android:textColor="?attr/textFillColor"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/name"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/place"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerDayOfWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp" />

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/color_picker"
                android:layout_width="200dp"
                android:layout_height="200dp"

                android:layout_gravity="center" />

            <com.larswerkman.holocolorpicker.SVBar
                android:id="@+id/svbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/buttonSave"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="16dp"
                android:text="@string/save"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>